womtool/src/test/resources/validate/wdl_draft3/invalid/required_workflow_input_not_defined/required_workflow_input_not_defined.wdl
version 1.0

import "import_me.wdl" as imported

workflow call_sub {
    input {
        String myInput
    }
    call imported.input_starved {
        input:
            feedme=myInput
    }
}